--- a/bloccit/Gemfile
+++ b/bloccit/Gemfile
@@ -25,6 +25,9 @@ source 'https://rubygems.org'
  
  gem 'bootstrap-sass'
  
+ # Used for encrypting User passwords
+ gem 'bcrypt'
+ 
  # Use Uglifier as compressor for JavaScript assets
  gem 'uglifier', '>= 1.3.0'
  # Use CoffeeScript for .coffee assets and views
