--- a/bloccit/Gemfile
+++ b/bloccit/Gemfile
@@ -1,33 +1,35 @@
 source 'https://rubygems.org'
- 
+
  # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
  gem 'rails', '4.2.4'
- 
+
  # #1
  group :production do
    gem 'pg'
    gem 'rails_12factor'
  end
- 
+
  # #2
  group :development do
    gem 'sqlite3'
    gem 'pry-rails'
  end
- 
+
  group :development, :test do
    gem 'rspec-rails', '~> 3.0'
    gem 'shoulda'
+   gem 'better_errors'
+   gem 'binding_of_caller'
  end
- 
+
  # Use SCSS for stylesheets
  gem 'sass-rails', '~> 5.0'
- 
+
  gem 'bootstrap-sass'
- 
+
  # Used for encrypting User passwords
  gem 'bcrypt'
- 
+
  # Use Uglifier as compressor for JavaScript assets
  gem 'uglifier', '>= 1.3.0'
  # Use CoffeeScript for .coffee assets and views
