--- a/bloccit/Gemfile
+++ b/bloccit/Gemfile
@@ -18,6 +18,7 @@ source 'https://rubygems.org'
  group :development, :test do
    gem 'rspec-rails', '~> 3.0'
    gem 'shoulda'
+   gem 'factory_girl_rails', '~> 4.0'
    gem 'better_errors'
    gem 'binding_of_caller'
  end
